<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToBudget</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_transaction_title">Add a transaction for</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="ok">OK</string>
    <string name="description">Description</string>
    <string name="cancel">cancel</string>
    <string name="select_sheet_key">Select Sheet</string>
    <string name="select_sheet">Select Spreadsheet Name to Use</string>
    <string name="select_sheet_summary">none</string>
    <string name="select_google_account_key">Select GDrive key</string>
    <string name="select_google_account">Select Google Drive Account to get Spreadsheet from</string>
    <string name="select_google_account_summary">None, the main account will prevail</string>

</resources>
